modify routes/swagger
